DBC22-3042: Fix for update count pill breaking in two lines on smaller devices

--- a/src/frontend/src/pages/EventsListPage.scss
+++ b/src/frontend/src/pages/EventsListPage.scss
@@ -183,6 +183,7 @@
   border-radius: 24px;
   padding: 4px 12px;
   z-index: 1000;
+  white-space: nowrap;
 
   &.top {
     top: calc(58px + 9px);
